--- a/server/configs/nginx.conf
+++ b/server/configs/nginx.conf
@@ -6,11 +6,14 @@ server {
   passenger_user app;
   passenger_ruby /usr/bin/ruby2.2;
 
+  #this should be larger -mt
+  client_max_body_size 200M;
+
   # Uncomment these settings to use SSL (you may wish to change the filenames
   # appropriately)
   listen 443 ssl;
-  ssl_certificate /etc/nginx/ssl/ENV['CRT'];
-  ssl_certificate_key /etc/nginx/ssl/ENV['KEY'];
+  ssl_certificate /etc/nginx/ssl/letsencrypt/live/autolab-testing.cs.uno.edu/fullchain.pem;
+  ssl_certificate_key /etc/nginx/ssl/letsencrypt/live/autolab-testing.cs.uno.edu/privkey.pem;
 
   # EFF recommended SSL settings
   #ssl_prefer_server_ciphers on;
